# jira-dc-mcp

./: .env.example  .gitignore  Dockerfile  EXAMPLE_PROMPTS.md  README.md  TODO.md  pyproject.toml
src/jira_dc_mcp/: __init__.py  __main__.py  automation_cache.py  client.py  reloader.py  server.py
src/jira_dc_mcp/tools/: __init__.py  analysis.py  automation.py  boards.py  dump.py  fields.py  filters.py  issues.py  projects.py  schemes.py  screens.py  servicedesk.py  users.py  workflows.py
