[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-dc-mcp"
version = "0.1.0"
description = "MCP server for Jira Data Center 10 administration and introspection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
jira-dc-mcp = "jira_dc_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_dc_mcp"]
